Change name of files to "Caja..."

--- a/teller/src/main/resources/servicioCaja.fxml
+++ b/teller/src/main/resources/servicioCaja.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="466.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.teller.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="466.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.teller.CajaController">
    <children>
       <Button fx:id="bttnNextTurn" layoutX="250.0" layoutY="393.0" mnemonicParsing="false" onAction="#siguienteTurno" text="Siguiente Turno" />
       <Label layoutX="165.0" layoutY="38.0" text="Realizar Depósito">
