--- a/service/src/main/resources/org/example/service/servicioCliente.fxml
+++ b/service/src/main/resources/org/example/service/servicioCliente.fxml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/17.0.2" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.example.service.ServicioClienteController">
-
-  <VBox spacing="20" alignment="CENTER" AnchorPane.topAnchor="20" AnchorPane.rightAnchor="20"
-        AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="20">
-
-    <Label text="Módulo de Servicio al Cliente" style="-fx-font-weight: bold; -fx-font-size: 18;"/>
-
-    <Label fx:id="lblStatus" text="Estado: No conectado"/>
-    <Label fx:id="lblClienteActual" text="Atendiendo: Ninguno" style="-fx-font-weight: bold;"/>
-
-    <HBox spacing="10" alignment="CENTER">
-      <Button fx:id="bttnNextTurn" text="Siguiente Turno" onAction="#siguienteTurno"
-              prefWidth="150" style="-fx-base: #4CAF50;"/>
-      <Button fx:id="bttnFinalizar" text="Finalizar Servicio" onAction="#finalizarServicio"
-              prefWidth="150" style="-fx-base: #F44336;" disable="true"/>
-    </HBox>
-
-    <Button text="Crear Nueva Cuenta" onAction="#crearNuevaCuenta"
-            prefWidth="200" style="-fx-base: #2196F3;"/>
-  </VBox>
+<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.service.ServicioClienteController">
+  <children>
+    <Label layoutX="34.0" layoutY="33.0" text="Servicio al Cliente">
+      <font>
+        <Font name="System Bold" size="18.0" />
+      </font>
+    </Label>
+    <Label layoutX="34.0" layoutY="95.0" text="Nombre:" />
+    <TextField fx:id="txtfNombre" layoutX="118.0" layoutY="91.0" prefWidth="250.0" promptText="Ingrese el nombre" />
+    <Label layoutX="34.0" layoutY="136.0" text="Apellidos:" />
+    <TextField fx:id="txtfApellidos" layoutX="118.0" layoutY="132.0" prefWidth="250.0" promptText="Ingrese los apellidos" />
+    <Label layoutX="34.0" layoutY="177.0" text="DPI:" />
+    <TextField fx:id="txtfDpi" layoutX="118.0" layoutY="173.0" prefWidth="250.0" promptText="Ingrese el DPI (sin guiones)" />
+    <Button fx:id="bttnCrearCuenta" layoutX="118.0" layoutY="225.0" mnemonicParsing="false" onAction="#realizarCreacionCuenta" prefWidth="120.0" text="Crear Cuenta" />
+    <Button fx:id="bttnNextTurn" layoutX="248.0" layoutY="225.0" mnemonicParsing="false" onAction="#siguienteTurno" prefWidth="120.0" text="Siguiente Turno" />
+    <Label layoutX="34.0" layoutY="300.0" text="Estado:" />
+    <Label fx:id="lblStatus" layoutX="118.0" layoutY="300.0" prefHeight="17.0" prefWidth="350.0" text="Esperando conexión..." />
+    <Label layoutX="34.0" layoutY="330.0" text="Turno Actual:" />
+    <Label fx:id="lblTurnoActual" layoutX="118.0" layoutY="330.0" prefHeight="17.0" prefWidth="350.0" text="-" />
+  </children>
 </AnchorPane>
