--- a/teller/src/main/resources/servicioCaja.fxml
+++ b/teller/src/main/resources/servicioCaja.fxml
@@ -1,24 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="466.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.teller.CajaController">
-   <children>
-      <Button fx:id="bttnNextTurn" layoutX="250.0" layoutY="393.0" mnemonicParsing="false" onAction="#siguienteTurno" text="Siguiente Turno" />
-      <Label layoutX="165.0" layoutY="38.0" text="Realizar Depósito">
-         <font>
-            <Font size="35.0" />
-         </font>
-      </Label>
-      <Label layoutX="191.0" layoutY="207.0" text="No. de cuenta:" />
-      <Label layoutX="170.0" layoutY="241.0" text="Monto a acreditar:" />
-      <TextField fx:id="txtfNumCuenta" layoutX="278.0" layoutY="203.0" />
-      <TextField fx:id="txtfMontoAcreditar" layoutX="278.0" layoutY="237.0" />
-      <Button fx:id="bttnRealizar" layoutX="271.0" layoutY="333.0" mnemonicParsing="false" onAction="#realizarDeposito" text="Realizar" />
-      <Label fx:id="lblStatus" layoutX="14.0" layoutY="435.0" text="..." />
-   </children>
-</AnchorPane>
+<VBox xmlns="http://javafx.com/javafx/17"
+      xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="org.example.teller.CajaController"
+      spacing="15" alignment="CENTER_LEFT" style="-fx-padding: 20;">
+
+   <Label text="Estado Conexión:"/>
+   <Label fx:id="lblStatus" text="Desconectado" style="-fx-font-weight: bold;"/>
+
+   <HBox spacing="10" alignment="CENTER_LEFT">
+      <Label text="Ticket Actual:"/>
+      <Label fx:id="lblCurrentTicketValue" text="N/A" style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: blue;"/>
+   </HBox>
+
+   <Button fx:id="bttnNextTurn" text="Siguiente Turno" onAction="#siguienteTurno" prefWidth="200"/>
+
+   <VBox spacing="10" style="-fx-border-color: lightgray; -fx-border-width: 1; -fx-padding: 10;">
+      <Label text="Detalles del Depósito:" style="-fx-font-weight: bold;"/>
+      <HBox spacing="10" alignment="CENTER_LEFT">
+         <Label text="Número de Cuenta:" minWidth="120"/>
+         <TextField fx:id="txtfNumCuenta" promptText="Ingrese número de cuenta"/>
+      </HBox>
+      <HBox spacing="10" alignment="CENTER_LEFT">
+         <Label text="Monto a Acreditar:" minWidth="120"/>
+         <TextField fx:id="txtfMontoAcreditar" promptText="Ingrese monto"/>
+      </HBox>
+      <Button fx:id="bttnRealizar" text="Realizar Depósito" onAction="#realizarDeposito" prefWidth="200"/>
+   </VBox>
+
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+   </padding>
+
+</VBox>
