--- a/service/src/main/resources/org/example/service/hello-view.fxml
+++ b/service/src/main/resources/org/example/service/hello-view.fxml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.service.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.service.ServicioClienteController">
+  <children>
+    <Label layoutX="34.0" layoutY="33.0" text="Servicio al Cliente">
+      <font>
+        <Font name="System Bold" size="18.0" />
+      </font>
+    </Label>
+    <Label layoutX="34.0" layoutY="95.0" text="Nombre:" />
+    <TextField fx:id="txtfNombre" layoutX="118.0" layoutY="91.0" prefWidth="250.0" promptText="Ingrese el nombre" />
+    <Label layoutX="34.0" layoutY="136.0" text="Apellidos:" />
+    <TextField fx:id="txtfApellidos" layoutX="118.0" layoutY="132.0" prefWidth="250.0" promptText="Ingrese los apellidos" />
+    <Label layoutX="34.0" layoutY="177.0" text="DPI:" />
+    <TextField fx:id="txtfDpi" layoutX="118.0" layoutY="173.0" prefWidth="250.0" promptText="Ingrese el DPI (sin guiones)" />
+    <Button fx:id="bttnCrearCuenta" layoutX="118.0" layoutY="225.0" mnemonicParsing="false" onAction="#realizarCreacionCuenta" prefWidth="120.0" text="Crear Cuenta" />
+    <Button fx:id="bttnNextTurn" layoutX="248.0" layoutY="225.0" mnemonicParsing="false" onAction="#siguienteTurno" prefWidth="120.0" text="Siguiente Turno" />
+    <Label layoutX="34.0" layoutY="300.0" text="Estado:" />
+    <Label fx:id="lblStatus" layoutX="118.0" layoutY="300.0" prefHeight="17.0" prefWidth="350.0" text="Esperando conexión..." />
+    <Label layoutX="34.0" layoutY="330.0" text="Turno Actual:" />
+    <Label fx:id="lblTurnoActual" layoutX="118.0" layoutY="330.0" prefHeight="17.0" prefWidth="350.0" text="-" />
+  </children>
+</AnchorPane>
